@@ -12,7 +12,7 @@ Changes from jTDS 1.2.6
  o Removed Java 1.3/JDBC 2 compatibility code.
  o Removed WebRing code from the project web site (Bug #660).
  o Fixed a race condition when closing a JtdsStatement in multiple threads
-   concurrently (Patch #121, #118)
+   concurrently (Patch #121, #118).
 
 
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
