@@ -3,6 +3,8 @@ Changes from jTDS 1.2.6
 
 08/16/2012 - Holger Rehn
  o Removed WebRing code from the project web site (Bug #660).
+ o Fixed a race condition when closing a JtdsStatement in multiple threads
+   concurrently (Patch #121, #118).
 
 
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
